--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "graphql-type-json": "^0.3.2",
     "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
+    "node-cron": "^3.0.3",
     "node-notifier": "^10.0.1"
   }
 }
