--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@google/generative-ai": "^0.1.3",
     "dotenv": "^16.3.2",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
     "luxon": "^3.4.4",
     "mongodb": "^6.3.0",
     "node-cron": "^3.0.3",
-    "node-notifier": "^10.0.1"
+    "node-notifier": "^10.0.1",
+    "nodemailer": "^6.9.8"
   }
 }
